syntax = "proto3";

package counter;

option java_package = "ar.edu.itba.pod.grpc.counter";
option java_multiple_files = true;
import "google/protobuf/empty.proto";

service CounterService {
  rpc ListSectors(google.protobuf.Empty) returns (stream SectorInfo);
  rpc GetCounterInfo(CounterInfo) returns (stream CounterResponse);
  rpc AssignCounters(AssignCounterInfo) returns (AssignCounterResponse);
}

message SectorInfo {
  string name = 1;
  repeated Interval intervals = 2;
}

message Interval {
  int32 lower_bound = 1;
  int32 upper_bound = 2;
}

message CounterInfo {
  string name = 1;
  Interval interval = 2;
}

message CounterResponse {
  Interval interval = 1;
  string airline = 2;
  repeated string flight_code = 3;
  int32 passengers = 4;
}

message AssignCounterInfo {
  string sector_name = 1;
  string flight_codes = 2;
  string airline = 3;
  int32 count = 4;
}

message AssignCounterResponse {
  AssignCounterInfo info = 1;
  Interval assigned_interval = 2;
  int32 pending_ahead = 3;
}